# embedded-i18n

./: Cargo.toml  LICENSE  README.md
.github/workflows/: check.yml
locales/: en.json  en.po  fr.json  fr.po
macros/: Cargo.toml  build.rs
macros/src/: json.rs  lib.rs  po.rs
src/: lib.rs  range.rs  time.rs
tests/: translate.rs
