[package]
name = "embedded-i18n"
version = "0.1.0"
edition = "2024"
description = "Compile-time internationalization (i18n) for embedded and no_std systems — translate strings at build time from JSON locale files and embed them directly into ROM."
license = "MIT"
repository = "https://github.com/alix-anneraud/embedded-i18n"
keywords = ["i18n", "internationalization", "embedded", "no-std", "localization"]
categories = ["internationalization", "embedded", "no-std"]
authors = ["Alix ANNERAUD <alix@anneraud.fr>"]

[dependencies]
embedded-i18n-macros = { path = "macros", default-features = false }

[features]
default = ["backend-json"]
std = []
backend-json = ["embedded-i18n-macros/backend-json"]
backend-po = ["embedded-i18n-macros/backend-po"]

[package.metadata.docs.rs]
features = ["std", "backend-json", "backend-po"]

[workspace]
members = ["macros"]
