[package]
name = "embedded-i18n-macros"
version = "0.1.0"
edition = "2024"
authors = ["Alix ANNERAUD <alix@anneraud.fr>"]
license = "MIT"
description = "Proc macros for embedded-i18n — compile-time translation embedding"

[dependencies]
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
regex = "1"
once_cell = "1.21"
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = ["backend-json"]
backend-json = ["dep:serde_json"]
backend-po = []

[lib]
proc-macro = true
